--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,6 +38,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 1rem;
 }
 
 .board-container {
